k8s/pricing-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing-api
  template:
    metadata:
      labels:
        app: pricing-api
    spec:
      containers:
        - name: pricing-api
          image: sdiascode/pricing-api:latest # Baixa direto do seu Docker Hub
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15 # Tempo de espera para o startup do .NET
            periodSeconds: 10       # Intervalo entre as checagens de travamento
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10 # Tempo de espera para checar se aceita tráfego
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: pricing-api-service
spec:
  selector:
    app: pricing-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
