k8s/rabbitmq-alias.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq # O nome exato que o MassTransit está procurando no seu C#
spec:
  type: ExternalName
  externalName: rabbitmq-service.default.svc.cluster.local
